--- a/public/css/main.css
+++ b/public/css/main.css
@@ -144,12 +144,12 @@ a, .field-label {
     height : 100%;
 }
 .file_list-body{
-    height: calc(100vh - 140px);
+    height: calc(100vh - 90px);
     overflow-y: auto; 
 }
 
 .file-upload-panel-body{
-    height: calc(100vh - 140px);
+    height: calc(100vh - 90px);
     overflow-y: auto; 
 }
 .file-icon {
@@ -429,7 +429,11 @@ input[type=checkbox], input[type=radio] {
 
 
 .info-data:hover > .info-editsave-btn {
-    display:inline-block;
+    display:inline-block;    
+}
+
+.info-editsave-btn:hover {
+    opacity: 1;
 }
 
 .info-data > input {
@@ -441,4 +445,78 @@ input[type=checkbox], input[type=radio] {
 .allow-edit > input {
     border : 1px;
     background: #f2f2f2;
+}
+
+.comment-textarea {
+  width: 100%;
+  height: 50px;
+  border: 0;
+  background: none;  
+}
+
+.comment-action {
+    text-align: right;
+    
+}
+
+.comment-action > button {
+    font-size: x-small;
+    padding: 0px 3px;
+    margin : 5px 0 5px 5px;
+}
+
+
+.enable-textarea{
+    border : 1px solid  #ccc;
+    background: #f2f2f2;
+}
+
+.comment-btn {
+    background: none;
+    border: 0;
+    display: none;
+    cursor: pointer;
+    opacity: 0.5;    
+    right: 5px;
+    margin-top: 5px;
+}
+
+.list-group-item:hover .comment-btn {    
+    display:inline-block;        
+}
+
+.comment-btn:hover {
+    opacity: 1;
+}
+
+.comment-edit-delete-div{
+    text-align: right;
+    height: 20px;
+}
+
+.comment-date {
+    float: left;
+    font-size: x-small;
+    opacity: 0.5;
+    margin-top: 5px;
+}
+
+.add-comment {
+    float: right;
+    opacity: 0.5;
+}
+
+.add-comment:hover {
+    opacity: 1;
+}
+
+.upload-file-action {
+    padding : 5px 8px;
+}
+.upload-file-action  > span{
+    font-size: 10px;
+}
+
+.db-fields{
+    padding : 10px 0 10px 0;
 }
