--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -1,4 +1,4 @@
-<div ng-controller="uploadCompanyController">
+<div ng-controller="contactController">
     
         <div class="sidebar">
             <div class="panel panel-primary">
@@ -31,7 +31,7 @@
         <div class="upload-body">
             <div class="panel panel-primary">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Add Company </h3>
+                    <h3 class="panel-title">Add Contact </h3>
                 </div>
                 <div class="panel-body file-upload-panel-body">
                     <div class="alert alert-warning">
