--- a/public/views/clicky.html
+++ b/public/views/clicky.html
@@ -1,46 +1,21 @@
-<div class="vc_container" ng-controller="clickyController">
-    
+<div class="vc_container" ng-controller="clickyController">    
         <div class="adv-search-div">
             <div class="panel panel-default">
                 <div class="panel-heading vc-advsearch-pnl-heading">
                     <h3 class="panel-title">Advanced Search</h3>
                 </div>
                 <div class="panel-body vc-advsearch-pnl-body">
-                    <div class="form-group" ng-repeat="sfield in searchFields">
-                        <label class="control-label" for="input_{{sfield.key}}">{{sfield.name}}:</label>
-                        <input type="text" class="form-control form-control-sm" id="input_{{sfield.key}}" placeholder="">
-                    </div>
-                    <!-- <div class="form-group">
-                        <label class="control-label " for="input_domain">IP Address:</label>
-
-                        <input type="text" class="form-control form-control-sm" ng-model="input_ip_address" placeholder="">
-
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label " for="input_address">Landing Page:</label>
-
-                        <input type="text" class="form-control form-control-sm" ng-model="input_landing_page" placeholder="">
-
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label " for="input_city">Geolocation:</label>
-
-                        <input type="text" class="form-control form-control-sm" ng-model="input_geolocation" placeholder="">
-
-                    </div>                                       
-                    <div class="form-group">
-                        <label class="control-label " for="input_country">Country:</label>
-
-                        <input type="text" class="form-control form-control-sm" ng-model="input_country_code" placeholder="">
-
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label " for="input_state">Actions:</label>
-
-                        <input type="text" class="form-control form-control-sm" ng-model="input_actions" placeholder="">
-
-                    </div>
-                   -->
+                    <table class="adv-search-field">
+                        <tr ng-repeat="field in fields">
+                            <td class="adv-search-field-label">
+                                <label  for="input_company">{{ fieldInfo[field].name }}</label>
+                            </td>
+                            <td>
+                                <input type="text" class="form-control form-control-sm adv-search-input"  id="adv_input_{{field}}" placeholder="">
+                            </td>
+                        </tr>
+                    </table>   
+                   
                     <div class="form-group adv_submit">
                         <button id="adv_submit" type="submit" class="btn btn-default btn-xs" ng-click="advancedSearch()">Submit</button>
                     </div>
@@ -48,78 +23,104 @@
             </div>
         </div>
         <div class="company-crosstab-div">
-            <div class="row">
-            <!--
-                <div class='col-sm-8'>
-                    <div class="input-group">
-                        <input ng-model="search" type="text" class="form-control" placeholder="Search for...">
-                        <span class="input-group-btn">
-                            <button title="Search" class="btn btn-default" type="button" ng-click="initSearch()"><span class="glyphicon glyphicon-search search-icon"></span></button>
+        <!-- <div class="input-group">
+                <input ng-model="search" type="text" class="form-control" placeholder="Search for...">
+                <span class="input-group-btn search-input-group-btn">
+                    <button title="Search" class="btn btn-default" type="button" ng-click="initSearch()"><span class="glyphicon glyphicon-search search-icon"></span></button>
+                </span>
+             </div>
+        -->
+
+            <div class="panel panel-primary company-panel">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Visitors 
+                        <span class='datetimepicker-container'>                        
+                                <datetimepicker requireddate="date" getvisitors="getvisitorsbydate()"></datetimepicker>                    
                         </span>
-                    </div>
-                </div> 
-            -->                
-           
-                <div class='col-sm-12'>
-                    <div class="panel panel-primary clicky-panel">
-                        <div class="panel-heading"> 
-                            <span class="panel-title"><strong>Visitors</strong></span>
-                            <span class='datetimepicker-container'>                        
-                                <datetimepicker requireddate="date" getvisitors="getvisitorsbydate()"></datetimepicker>                        
-                            </span>
-                                                                    
+                        <span ng-click="showFieldsConfig = !showFieldsConfig" ng-init="showFieldsConfig=false" class="glyphicon glyphicon-cog cog"></span>
+                    </h3>  
+                    <div ng-show="showFieldsConfig" class="col-selection arrow_box shadow">
+                        <span ng-click="showFieldsConfig = !showFieldsConfig" class="glyphicon glyphicon-remove col-selection-close"></span>
+                        <div class="checkbox" ng-repeat="(key,field) in fieldInfo">                            
+                            <label><input type="checkbox" class="field-chkbox" value="{{key}}" ng-checked="fields.indexOf(key)!=-1" ><span>{{field.name}}</span></label>
                         </div>
-                        <div class="panel-body vc_clicky_list">
-                            <table class="ih-table" id="company_tbl" companytbl colswidth="colsw" colfields="fields">
-                                <thead class="ih-thead">
-                                    <tr>
-                                        <th class="ih-th" style="width:{{colsw + 'px'}}" ng-repeat="field in fields"> {{field.name}}</th>                            
-                                    </tr>
-                                </thead>
-                                <tbody class="ih-tbody ih-tbody-clicky" scrolly="showMore()">
-                                    <tr ng-repeat="visitor in visitors" data-toggle="modal" data-target="#myModal" ng-click="getInfo(visitor._id)">
-                                        <td class="ih-td" style="width:{{colsw + 'px'}}" ng-repeat="field in fields"> {{visitor[field.key] || ''}}</td>                            
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <p class="list-status"> Showing {{cursor_skip}} of {{cursor_total}} </p>                            
-                        </div>                
-                    </div>
+                        <div class="col-selection-submit">
+                            <button ng-click="showConfiguredFields()"> Save </button>
+                        </div>
+                    </div>                  
                 </div>
+                <div class="panel-body vc_company_list">
+                    <table class="ih-table" id="company_tbl" companytbl colswidth="colsw" colfields="fields">
+                        <thead class="ih-thead ">
+                            <tr>
+                                <th class="ih-th" style="width:{{colsw + 'px'}}" ng-repeat="field in fields"> {{fieldInfo[field].name}}</th>                            
+                            </tr>
+                        </thead>
+                        <tbody class="ih-tbody ih-tbody-company">
+                            <tr ng-repeat="company in records" data-toggle="modal" data-target="#myModal" ng-click="getInfo(company._id)">
+                                <td class="ih-td" style="width:{{colsw + 'px'}}" ng-repeat="field in fields" id="{{company._id + '_' + field}}" > {{company[field]}}</td>                            
+                            </tr>
+                        </tbody>
+                    </table>      
+                </div>                              
             </div>
+            <div class="table-status">                
+                    <ul class="pagination pagination-sm">
+                        <li class="page-item" ng-class="{'disabled' : page == 1 }" ng-click="showMore(page -1)">
+                        <span class="page-link" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </span>
+                        </li>
+                        <li class="page-item pg" ng-repeat="p in pages" ng-class="{'pg-active' : page == p }" ng-click="showMore(p)"><span class="page-link">{{p}}</span></li>
+                        
+                        <li class="page-item" ng-class="{'disabled' : page == totalPages }" ng-click="showMore(page + 1)">
+                        <span class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Next</span>
+                        </span>
+                        </li>
+                    </ul>
+                    <span class="list-status"> Showing {{ recordStart }} to {{ recordEnd }} of {{cursor_total}} </span>
+            </div> 
         </div>
-        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                    <button ng-click="removeComments()" type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
                     </button>
-                    <h4 class="modal-title" id="myModalLabel">Details</h4>
+                    <h4 class="modal-title" id="myModalLabel">Details </h4>
+                    
                 </div>
                 <div class="modal-body">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-md-6 info-div" ng-repeat="field in infoFields"> 
-                                <div class="info-label">{{field.name}}</div> 
-                                <div>{{visitorsInfo[field.key]}}</div>
+                            <div class="col-md-6 info-div" ng-repeat="(key, info) in recordsInfo" ng-if="key != 'actions' && key != '_id'"> 
+                                <div class="info-label">{{fieldInfo[key].name}}</div> 
+                                <div class="info-data" title="Click to edit" >
+                                    <input type="text" id="{{key}}" value="{{info}}" disabled> 
+                                    <span ng-click="allowEditing(key)" class="glyphicon glyphicon-pencil info-editsave-btn"></span>
+                                    <span ng-click="saveEditing(key)" class="glyphicon glyphicon-floppy-disk info-editsave-btn"></span>                                    
+                                </div>
                             </div>                            
                         </div>
                         <div class="row">
                             <div class="col-md-12 info-div"> <div class="info-label">Actions</div>
                                 <ul>
-                                    <li ng-repeat="action in visitorsInfo['actions']">
+                                    <li ng-repeat="action in recordsInfo['actions']">
                                         <p class="action-info" >{{action['action_title']}}</p>
                                         <p>{{action['action_url']}}</p>
                                     </li>
-                                </ul>
-                                
-                            </div>                            
+                                </ul>                                
+                            </div>                    
                         </div>
                     </div>                    
                 </div>                
                 </div>
             </div>
-        </div>      
+        </div>
+        
        
 </div>
