--- a/public/views/view_company.html
+++ b/public/views/view_company.html
@@ -62,15 +62,15 @@
             </div>
             <div class="table-status">                
                     <ul class="pagination pagination-sm">
-                        <li class="page-item" ng-class="{'disabled' : page == 1 }" ng-click="showMore(page -1)">
+                        <li class="page-item" ng-class="{'disabled' : page == 1 }" ng-click="initSearch(page -1)">
                         <span class="page-link" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                             <span class="sr-only">Previous</span>
                         </span>
                         </li>
-                        <li class="page-item pg" ng-repeat="p in pages" ng-class="{'pg-active' : page == p }" ng-click="showMore(p)"><span class="page-link">{{p}}</span></li>
+                        <li class="page-item pg" ng-repeat="p in pages" ng-class="{'pg-active' : page == p }" ng-click="initSearch(p)"><span class="page-link">{{p}}</span></li>
                         
-                        <li class="page-item" ng-class="{'disabled' : page == totalPages }" ng-click="showMore(page + 1)">
+                        <li class="page-item" ng-class="{'disabled' : page == totalPages }" ng-click="initSearch(page + 1)">
                         <span class="page-link" href="#" aria-label="Next">
                             <span aria-hidden="true">&raquo;</span>
                             <span class="sr-only">Next</span>
