--- a/public/views/clicky.html
+++ b/public/views/clicky.html
@@ -31,7 +31,7 @@
              </div>
         -->
 
-            <div class="panel panel-default company-panel">
+            <div class="panel panel-primary company-panel">
                 <div class="panel-heading">
                     <h3 class="panel-title">Visitors 
                         <span class='datetimepicker-container'>                        
