--- a/public/views/clicky.html
+++ b/public/views/clicky.html
@@ -1,5 +1,12 @@
 <div class="vc_container" ng-controller="clickyController">    
         <div class="adv-search-div">
+            <div class="row">
+                <div class="col-xs-12 datetimepicker-container">
+                    <span>                        
+                        <datetimepicker requireddate="date" getvisitors="initSearch()"></datetimepicker>                    
+                    </span>
+                </div>
+            </div>
             <div class="panel panel-default">
                 <div class="panel-heading vc-advsearch-pnl-heading">
                     <h3 class="panel-title">Advanced Search</h3>
@@ -30,13 +37,14 @@
                 </span>
              </div>
         -->
-
+            
             <div class="panel panel-primary company-panel">
                 <div class="panel-heading">
                     <h3 class="panel-title">Visitors 
-                        <span class='datetimepicker-container'>                        
+                        <!-- <span class='datetimepicker-container'>                        
                                 <datetimepicker requireddate="date" getvisitors="initSearch()"></datetimepicker>                    
                         </span>
+                        -->
                         <span ng-click="showFieldsConfig = !showFieldsConfig" ng-init="showFieldsConfig=false" class="glyphicon glyphicon-cog cog"></span>
                     </h3>  
                     <div ng-show="showFieldsConfig" class="col-selection arrow_box shadow">
