--- a/public/views/ipcheck.html
+++ b/public/views/ipcheck.html
@@ -1,17 +1,59 @@
 <div  ng-controller="ipCheckController">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-3 datetimepicker-container">
+                <span>                        
+                    <datetimepicker requireddate="date" getvisitors="initSearch()"></datetimepicker>                    
+                </span>
+            </div>
+            <div class="col-xs-9">
                 <div>
                     <div class="input-group">
-                        <input ng-model="search_ip" type="text" class="form-control" placeholder="Search for IP...">
+                        <input ng-model="search_ip" type="text" class="form-control form-control-sm" placeholder="Search for IP...">
                         <span class="input-group-btn">
                             <button title="Search" class="btn btn-default" type="button" ng-click="searchIpInfo()"><span class="glyphicon glyphicon-search search-icon-ip"></span></button>
                         </span>
                     </div>            
                 </div>
             </div>
-            <div class="col-xs-6 ipc_left_div">
+        </div>
+        <div class="row">
+            <div class="col-xs-3 ipc_left_div">
+                <div class="clicky-data">
+                    <ul class="list-group clicky-data-ul">
+                        <li class="list-group-item" ng-repeat="visitor in records" ng-click="getInfo(visitor._id)">
+                            <p class="ip-heading" > {{ visitor.organization }} </p>
+                            <span>{{ visitor.ip_address}}</span>
+                        </li>                                           
+                    </ul>
+                </div>
+                <div class="table-status">                
+                    <ul class="pagination pagination-sm">
+                        <li class="page-item" ng-class="{'disabled' : page == 1 }" ng-click="initSearch(page -1)">
+                        <span class="page-link" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </span>
+                        </li>
+                        <li class="page-item pg" ng-repeat="p in pages" ng-class="{'pg-active' : page == p }" ng-click="initSearch(p)"><span class="page-link">{{p}}</span></li>
+                        
+                        <li class="page-item" ng-class="{'disabled' : page == totalPages }" ng-click="initSearch(page + 1)">
+                        <span class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Next</span>
+                        </span>
+                        </li>
+                    </ul>
+                    <span class="list-status"> Showing {{ recordStart }} to {{ recordEnd }} of {{cursor_total}} </span>
+                </div>
+            </div>
+            <div class="col-xs-3 ipc_left_div">
+                <div class="header">
+                    Clicky
+                </div> 
+            </div>
+
+            <div class="col-xs-3 ipc_left_div">
                 <div class="header">
                     DB IP API
                 </div>                
@@ -25,7 +67,7 @@
                 </div>
 
             </div>
-            <div class="col-xs-6 ipc_right_div">
+            <div class="col-xs-3 ipc_right_div">
                 <div class="header">
                     IP Location DB
                 </div>                
