--- a/public/views/ipcheck.html
+++ b/public/views/ipcheck.html
@@ -21,7 +21,7 @@
             <div class="col-xs-3 ipc_left_div">
                 <div class="clicky-data">
                     <ul class="list-group clicky-data-ul">
-                        <li class="list-group-item" ng-repeat="visitor in records" ng-click="getInfo(visitor._id)">
+                        <li class="list-group-item" ng-repeat="visitor in records" ng-click="searchIpInfo(visitor._id, visitor.ip_address)">
                             <p class="ip-heading" > {{ visitor.organization }} </p>
                             <span>{{ visitor.ip_address}}</span>
                         </li>                                           
@@ -51,13 +51,21 @@
                 <div class="header">
                     Clicky
                 </div> 
+                <div ng-show="clicky_loading" class="loading_ipcontent">
+                    <svg width='120px' height='120px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-ring"><rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect><circle cx="50" cy="50" r="40" stroke-dasharray="163.36281798666926 87.9645943005142" stroke="#d25353" fill="none" stroke-width="20"><animateTransform attributeName="transform" type="rotate" values="0 50 50;180 50 50;360 50 50;" keyTimes="0;0.5;1" dur="1s" repeatCount="indefinite" begin="0s"></animateTransform></circle></svg>
+                </div>
+                <div class="info">
+                    <ul class="list-group">
+                        <li  ng-repeat="field in clicky_fields" class="list-group-item {{'list-group-item_' + $index}}"><span class="ip_label">{{field.name}} </span> : &nbsp; {{recordsInfo[field.key] || ""}}</li>                        
+                    </ul>
+                </div>
             </div>
 
             <div class="col-xs-3 ipc_left_div">
                 <div class="header">
                     DB IP API
                 </div>                
-                <div ng-show="dbip_loading" class="loading_dbip">
+                <div ng-show="dbip_loading" class="loading_ipcontent">
                     <svg width='120px' height='120px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-ring"><rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect><circle cx="50" cy="50" r="40" stroke-dasharray="163.36281798666926 87.9645943005142" stroke="#d25353" fill="none" stroke-width="20"><animateTransform attributeName="transform" type="rotate" values="0 50 50;180 50 50;360 50 50;" keyTimes="0;0.5;1" dur="1s" repeatCount="indefinite" begin="0s"></animateTransform></circle></svg>
                 </div>
                 <div class="info">
@@ -71,7 +79,7 @@
                 <div class="header">
                     IP Location DB
                 </div>                
-                <div ng-show="iplocation_loading" class="loading_iplocation">
+                <div ng-show="iplocation_loading" class="loading_ipcontent">
                     <svg width='120px' height='120px' xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" class="uil-ring"><rect x="0" y="0" width="100" height="100" fill="none" class="bk"></rect><circle cx="50" cy="50" r="40" stroke-dasharray="163.36281798666926 87.9645943005142" stroke="#d25353" fill="none" stroke-width="20"><animateTransform attributeName="transform" type="rotate" values="0 50 50;180 50 50;360 50 50;" keyTimes="0;0.5;1" dur="1s" repeatCount="indefinite" begin="0s"></animateTransform></circle></svg>
                 </div>
                 <div class="info">
